--- a/abs.tex
+++ b/abs.tex
@@ -1,5 +1,4 @@
 \author{Tharit Tangkijwanichakul, The University of Texas at Austin}
 \title{Abstract}
 \label{ch:abs}
-
-This is abstract Chapter
+We approximate the inverse Hessian operator by a chain of weights in time/space and frequency domains. Tests on synthetic data shows that this approach provides an effective approximation while having the minimal cost of forward and inverse FFTs (Fast Fourier Transforms). The method can be applied either for compensating migrated images or in the form of a preconditioner inside iterative least-squares reverse-time migration (LSRTM). As demonstrated by experiments with synthetic data, the latter significantly accelerates the convergence of LSRTM and achieves high-quality imaging results in fewer iterations.
