--- a/thesis.bib
+++ b/thesis.bib
@@ -277,3 +277,14 @@
   year={1995},
   publisher={SIAM}
 }
+
+@article{madagascar,
+  title={Madagascar: open-source software project for multidimensional data analysis and reproducible computational experiments},
+  author={Fomel, S[] and Sava, P[] and Vlad, I[] and Liu, Y[] and Bashkardin, V[]},
+  journal={Journal of Open Research Software},
+  volume={1},
+  number={1},
+  pages={e8},
+  year={2013}
+}
+
