--- a/thesis.bib
+++ b/thesis.bib
@@ -287,4 +287,10 @@
   pages={e8},
   year={2013}
 }
+@book{claerbout1992earth,
+  title={Earth soundings analysis: Processing versus inversion},
+  author={Claerbout, Jon F},
+  volume={6},
+  year={1992}
+}
 
