--- a/vita.tex
+++ b/vita.tex
@@ -1,1 +1,1 @@
-This is my vita
+Tharit Tangkijwanichakul graduated from Triam Udom Suksa High School in Thailand. He received a scholarship from PTT Exploration and Production (PTTEP), Thailand state-owned E$\&$P Company, to study exploration geophysics in the USA. He pursued a Bachelor of Science degree in Geophysics from the Jackson School of Geosciences along with getting the certificate in Compuational Science and Engineering from Oden Institute of Computational Science and Engineering. After graduation, he will go back to Thailand and work full-time as a geophysicist for PTTEP.
