--- a/ack.tex
+++ b/ack.tex
@@ -1,4 +1,10 @@
-This is acknowledgement chapter
+For my past 4 years at the University of Texas at Austin as an undergraduate student, I have received many supports from people I encountered. First, I would like to thank Dr. Sergey Fomel for his role as both academic advisor and examplary scientist. I benevolently have been influenced by him in many ways. I am thankful for his style of not hand-holding his students. His guidance is always useful but always leaves the room for me to think and self-study to finally come up with conclusions by myself. Most importantly, it is his emphasis on reproducibility of research which encourages the intellectual honesty and transparency. That being said, for working with him, not only I have sharpen my technical expertise but I also have a chance to refine my character.
+
+I also want to thank many professors in Jackson School of Geosciences whom I have encountered. I particularly thank Dr. Kyle Spikes and Thomas Hess who acted as my very first research supervisors and introduced me the field of seismic processing. This led me to discover my interest and eventually meet Dr. Sergey Fomel. I also want to mention Dr. Stephen Grand, Dr. Clark Wilson, and Dr. Luc Lavier for their help in builing my foundation in geophysics.
+
+I am grateful to many graduate students and research scientists I have met along the way: Harpreet Kaur, Ben Gremillion, Nam Pham, Zhicheng Geng, Luke Decker, Rebecca Gao, Hector Corzo, Dr. Yuzhi Shi, Dr. Ray Abma. Interacting with them helps me grow intellectually and personally. Prior to working with the  Texas  Consortium for Computational  Seismology (TCCS), I used to believe I was a relatively sucessful student. However, having met these graduate students, I became more humble. I realize that there are entirely different playing field out there. This, in turn, aspired me to never stop learning.
+
+Last but not least, I want to thank my soon-to-be colleage at PTTEP and my family back in Thailand for supporting me for all these years in the United States. Even without their physical presence, I never feel walking alone. 
 
 
 \begin{flushright}
