--- a/ack.tex
+++ b/ack.tex
@@ -2,7 +2,7 @@ For my past 4 years at the University of Texas at Austin as an undergraduate stu
 
 I also want to thank many professors in Jackson School of Geosciences whom I have encountered. I particularly thank Dr. Kyle Spikes and Thomas Hess who acted as my very first research supervisors and introduced me the field of seismic processing. This led me to discover my interest and eventually meet Dr. Sergey Fomel. I also want to mention Dr. Stephen Grand, Dr. Clark Wilson, and Dr. Luc Lavier for their help in builing my foundation in geophysics.
 
-I am grateful to many graduate students and research scientists I have met along the way: Harpreet Kaur, Ben Gremillion, Nam Pham, Zhicheng Geng, Luke Decker, Rebecca Gao, Hector Corzo, Dr. Yuzhi Shi, Dr. Ray Abma. Interacting with them helps me grow intellectually and personally. Prior to working with the  Texas  Consortium for Computational  Seismology (TCCS), I used to believe I was a relatively sucessful student. However, having met these graduate students, I became more humble. I realize that there are entirely different playing field out there. This, in turn, aspired me to never stop learning.
+I am grateful to many graduate students and research scientists I have met along the way: Harpreet Kaur, Ben Gremillion, Nam Pham, Zhicheng Geng, Luke Decker, Rebecca Gao, Hector Corzo, Dr. Yuzhi Shi, Dr. Ray Abma. Interacting with them helps me grow intellectually and personally. Prior to working with the  Texas  Consortium for Computational  Seismology (TCCS), I used to be rather overconfident student. However, having met and got to know both present and former TCCS students, I became more humble. I realize that there are entirely different playing field out there. This in turn aspired me to never stop learning.
 
 Last but not least, I want to thank my soon-to-be colleage at PTTEP and my family back in Thailand for supporting me for all these years in the United States. Even without their physical presence, I never feel walking alone. 
 
