--- a/thesis.bib
+++ b/thesis.bib
@@ -293,4 +293,58 @@
   volume={6},
   year={1992}
 }
-
+@article{tarantola1984linearized,
+  title={Linearized inversion of seismic reflection data},
+  author={Tarantola, Albert},
+  journal={Geophysical prospecting},
+  volume={32},
+  number={6},
+  pages={998--1015},
+  year={1984},
+  publisher={Wiley Online Library}
+}
+@article{wiggins1972general,
+  title={The general linear inverse problem: Implication of surface waves and free oscillations for earth structure},
+  author={Wiggins, Ralph A},
+  journal={Reviews of Geophysics},
+  volume={10},
+  number={1},
+  pages={251--285},
+  year={1972},
+  publisher={Wiley Online Library}
+}
+@article{jones2014tutorial,
+  title={Tutorial: migration imaging conditions},
+  author={Jones, Ian},
+  journal={First break},
+  volume={32},
+  number={12},
+  year={2014},
+  publisher={European Association of Geoscientists \& Engineers}
+}
+@article{pica1990nonlinear,
+  title={Nonlinear inversion of seismic reflection data in a laterally invariant medium},
+  author={Pica, A and Diet, JP and Tarantola, A},
+  journal={Geophysics},
+  volume={55},
+  number={3},
+  pages={284--292},
+  year={1990},
+  publisher={Society of Exploration Geophysicists}
+}
+@book{keys1998comparison,
+  title={Comparison of seismic inversion methods on a single real data set},
+  author={Keys, Robert G and Foster, Douglas J},
+  year={1998},
+  publisher={Society of Exploration Geophysicists}
+}
+@article{liner2004nonlinear,
+  title={Nonlinear pairwise alignment of seismic traces},
+  author={Liner, Christopher L and Clapp, Robert G},
+  journal={Geophysics},
+  volume={69},
+  number={6},
+  pages={1552--1559},
+  year={2004},
+  publisher={Society of Exploration Geophysicists}
+}
